# rusty_rockit

./: .gitignore  .gitmodules  Cargo.toml  Containerfile.armv7-unknown-linux-gnueabihf  Cross.toml  Makefile  README.md  build.rs  getauxval_stub.c
.cargo/: config.toml
examples/: rk_enc.rs  rk_enc_owned.rs  rk_init.rs  rk_vi_enc.rs  rk_vi_enc_owned.rs  rk_vpss.rs  test_camera_encoder.rs  test_simple_encoder.rs  test_venc.rs  test_vi_venc.rs  test_vpss.rs
rockit-sys/: Cargo.toml  aiq.h  armv7-unknown-linux-uclibcgnueabihf.json  build.rs  getauxval_stub.c  mpi.h
rockit-sys/src/: lib.rs
src/: aiq.rs  encoder.rs  lib.rs  mb.rs  util.rs  venc.rs  vi.rs  vpss.rs
