[workspace]
resolver = "2"
members = [
    "rockit-sys",
]

[package]
name = "rusty-rockit"
version = "0.1.0"
edition = "2024"

[features]
default = ["mpi", "aiq"]
mpi = ["rockit-sys/mpi"]
aiq = ["rockit-sys/aiq"]

[dependencies]
rockit-sys = { path = "rockit-sys" }
snafu = "0.9"

[profile.release]
strip = true

[build-dependencies]
cc = "1.2"
